refactor: customizable worker loops

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(Rush)
 export(RushWorker)
 export(fun_heartbeat)
 export(fun_loop)
-export(list_fun_loop)
+export(run_worker)
 import(checkmate)
 import(data.table)
 import(future)
