feat: start worker with script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RushWorker)
 export(fun_heartbeat)
 export(fun_loop)
 export(run_worker)
+export(start_worker)
 import(checkmate)
 import(data.table)
 import(future)
