--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,16 +11,16 @@ License: LGPL-3
 Depends:
     R (>= 3.1.0),
 Imports:
+    callr,
     checkmate,
     data.table,
     future,
+    globals,
     lgr,
     mlr3misc,
     redux,
     uuid
 Suggests:
-    callr,
-    evaluate,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
