docs: add common parameters to man-roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ import(future)
 import(mlr3misc)
 import(redux)
 importFrom(callr,r_bg)
+importFrom(globals,globalsByName)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
