--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,4 +28,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Config/testthat/edition: 3
-Config/testthat/parallel: true
+Config/testthat/parallel: false
