--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -37,85 +37,13 @@ navbar:
       href: https://mlr-org.com/
 
 reference:
-  - title: Building Blocks
+  - title: Controller and Worker
     contents:
-      - Task
-      - Learner
-      - Measure
-      - Resampling
-      - Prediction
-  - title: Data Backends
+      - Rush
+      - RushWorker
+  - title: Misc
     contents:
-      - starts_with("DataBackend")
-      - as_data_backend
-  - title: Classification
-    contents:
-      - TaskClassif
-      - as_task_classif
-      - LearnerClassif
-      - MeasureClassif
-      - PredictionClassif
-  - title: Regression
-    contents:
-      - TaskRegr
-      - as_task_regr
-      - LearnerRegr
-      - MeasureRegr
-      - PredictionRegr
-  - title: Tasks
-    contents:
-      - starts_with("mlr_tasks")
-      - as_task
-      - convert_task
-  - title: Task Generators
-    contents:
-      - TaskGenerator
-      - starts_with("mlr_task_generators")
-  - title: Learners
-    contents:
-      - starts_with("mlr_learners")
-      - as_learner
-      - HotstartStack
-  - title: Measures
-    contents:
-      - starts_with("mlr_measures")
-      - default_measures
-      - as_measure
-  - title: Resampling Strategies
-    contents:
-      - starts_with("mlr_resamplings")
-      - as_resampling
-  - title: Resample
-    contents:
-      - resample
-      - partition
-      - ResampleResult
-      - as_result_data
-      - as_resample_result
-  - title: Benchmarking
-    contents:
-      - benchmark
-      - benchmark_grid
-      - BenchmarkResult
-      - as_result_data
-      - as_benchmark_result
-  - title: Converters
-    contents:
-      - starts_with("as_")
-  - title: Syntactic Sugar and Reflections
-    contents:
-      - install_pkgs
-      - mlr_sugar
-      - mlr_reflections
-      - set_threads
-  - title: Internal Objects and Functions
-    contents:
-      - MeasureSimilarity
-      - mlr_assertions
-      - ResultData
-      - PredictionData
-      - predict.Learner
-      - mlr_test_helpers
-  - title: Package
-    contents:
-      - mlr3-package
+      - run_worker
+      - fun_loop
+      - start_worker
+      - fun_heartbeat
