--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Rush)
 export(RushWorker)
 export(fun_heartbeat)
 export(fun_loop)
+export(rsh)
 export(run_worker)
 export(start_worker)
 import(checkmate)
