refactor: remove future

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,14 @@
 export(Rush)
 export(RushWorker)
 export(fun_heartbeat)
-export(fun_loop)
+export(get_hostname)
 export(rsh)
-export(run_worker)
 export(start_worker)
+export(worker_loop_default)
 import(checkmate)
 import(data.table)
-import(future)
 import(mlr3misc)
 import(redux)
-importFrom(callr,r_bg)
-importFrom(globals,globalsByName)
+importFrom(processx,process)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
