--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,29 @@
 Package: rush
-Title: Parallele Programmierung
+Title: Parallel and Distributed Programming
 Version: 0.0.0.9000
 Authors@R:
   c(
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-8115-0400"))
   )
-Description: Parallel programmierung with future and redis.
+Description: Parallel programming package.
 License: LGPL-3
 Depends:
     R (>= 3.1.0),
 Imports:
-    callr,
     checkmate,
     data.table,
-    future,
-    globals,
     lgr,
     mlr3misc,
+    processx,
     redux,
     uuid
 Suggests:
+    callr,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
