feat: add rush_plan

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(RushWorker)
 export(fun_heartbeat)
 export(get_hostname)
 export(rsh)
+export(rush_available)
+export(rush_config)
+export(rush_plan)
 export(start_worker)
 export(worker_loop_default)
 import(checkmate)
