refactor: remove future (#14)
* refactor: export globals with redis

* refactor: remove future

* test: kill workers

* fix: pkgdown

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -44,8 +44,7 @@ reference:
       - rsh
   - title: Misc
     contents:
-      - run_worker
-      - fun_loop
+      - worker_loop_default
       - start_worker
       - fun_heartbeat
       - rush-package
