feat: add data_format option to fetch methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(checkmate)
 import(data.table)
 import(mlr3misc)
 import(redux)
+importFrom(jsonlite,fromJSON)
 importFrom(processx,process)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
