--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(checkmate)
 import(data.table)
 import(mlr3misc)
 import(redux)
+import(rlecuyer)
 importFrom(jsonlite,fromJSON)
 importFrom(processx,process)
 importFrom(utils,str)
