--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ import(mlr3misc)
 import(redux)
 importFrom(jsonlite,fromJSON)
 importFrom(parallel,nextRNGStream)
+importFrom(parallel,nextRNGSubStream)
 importFrom(processx,process)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
