--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -51,6 +51,7 @@ reference:
     contents:
       - start_worker
       - worker_loop_default
+      - worker_loop_callr
       - heartbeat
       - AppenderRedis
   - title: Misc
