feat: add callr encapsulation (#24)
* feat: add callr encapsulation

* draft

* draft

* refactor: read functions

* refactor: combine read functions

* chore: pkgdown

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,15 @@ export(rush_available)
 export(rush_config)
 export(rush_plan)
 export(start_worker)
+export(worker_loop_callr)
 export(worker_loop_default)
 import(checkmate)
 import(data.table)
 import(mlr3misc)
 import(redux)
-import(rlecuyer)
 importFrom(jsonlite,fromJSON)
+importFrom(parallel,nextRNGStream)
+importFrom(parallel,nextRNGSubStream)
 importFrom(processx,process)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
