feat: store large objects on disk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(rush_available)
 export(rush_config)
 export(rush_plan)
 export(start_worker)
+export(store_large_object)
 export(with_rng_state)
 export(worker_loop_callr)
 export(worker_loop_default)
