feat: add rush assertions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(AppenderRedis)
 export(Rush)
 export(RushWorker)
+export(assert_rush)
+export(assert_rush_worker)
+export(assert_rush_workers)
+export(assert_rushs)
 export(get_hostname)
 export(heartbeat)
 export(rsh)
