--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(assert_rush_workers)
 export(assert_rushs)
 export(get_hostname)
 export(heartbeat)
+export(remove_rush_plan)
 export(rsh)
 export(rush_available)
 export(rush_config)
