--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,7 @@ Suggests:
     callr,
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0),
-    withr
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 Encoding: UTF-8
