--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: rush
 Title: Rapid Parallel and Distributed Computing
 Version: 0.0.0.9000
 Authors@R:
-    person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut"),
+    person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut", "cph"),
            comment = c(ORCID = "0000-0002-8115-0400"))
 Description: Parallel computing with a network of local and remote
     workers. Fast exchange of results between the workers through a 'Redis'
