--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,12 @@ Authors@R:
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut", "cph"),
            comment = c(ORCID = "0000-0002-8115-0400"))
 Description: Parallel computing with a network of local and remote
-    workers. Fast exchange of results between the workers through a 'Redis'
-    database. Key features include task queues, local caching, and
+    workers. Fast exchange of results between the workers through a
+    'Redis' database. Key features include task queues, local caching, and
     sophisticated error handling.
 License: LGPL-3
+URL: https://github.com/mlr-org/rush
+BugReports: https://github.com/mlr-org/rush/issues
 Depends:
     R (>= 3.1.0)
 Imports:
