--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rush
 Title: Rapid Parallel and Distributed Computing
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R:
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut", "cph"),
            comment = c(ORCID = "0000-0002-8115-0400"))
@@ -8,7 +8,6 @@ Description: Parallel computing with a network of local and remote
     workers. Fast exchange of results between the workers through a
     'Redis' database. Key features include task queues, local caching, and
     sophisticated error handling.
-License: LGPL-3
 URL: https://github.com/mlr-org/rush
 BugReports: https://github.com/mlr-org/rush/issues
 Depends:
@@ -33,3 +32,4 @@ Config/testthat/parallel: false
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+License: MIT + file LICENSE
