--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(checkmate)
 import(data.table)
 import(mlr3misc)
 import(redux)
+importFrom(R6,R6Class)
 importFrom(jsonlite,fromJSON)
 importFrom(parallel,nextRNGStream)
 importFrom(parallel,nextRNGSubStream)
