--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,11 @@ export(worker_loop_callr)
 export(worker_loop_default)
 import(checkmate)
 import(data.table)
+import(mirai)
 import(mlr3misc)
 import(redux)
 importFrom(R6,R6Class)
+importFrom(ids,adjective_animal)
 importFrom(jsonlite,fromJSON)
 importFrom(parallel,nextRNGStream)
 importFrom(parallel,nextRNGSubStream)
