--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(rush_available)
 export(rush_config)
 export(rush_plan)
 export(start_worker)
+export(start_worker_mirai)
 export(store_large_object)
 export(with_rng_state)
 export(worker_loop_callr)
