--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,8 @@ export(rush_available)
 export(rush_config)
 export(rush_plan)
 export(start_worker)
-export(start_worker_mirai)
 export(store_large_object)
 export(with_rng_state)
-export(worker_loop_callr)
-export(worker_loop_default)
 import(checkmate)
 import(data.table)
 import(mirai)
@@ -30,5 +27,6 @@ importFrom(jsonlite,fromJSON)
 importFrom(parallel,nextRNGStream)
 importFrom(parallel,nextRNGSubStream)
 importFrom(processx,process)
+importFrom(utils,object.size)
 importFrom(utils,str)
 importFrom(uuid,UUIDgenerate)
