--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,4 +32,5 @@ Config/testthat/parallel: false
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+VignetteBuilder: quarto
 License: MIT + file LICENSE
