--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(assert_rush_worker)
 export(assert_rush_workers)
 export(assert_rushs)
 export(get_hostname)
+export(heartbeat)
 export(remove_rush_plan)
 export(rsh)
 export(rush_available)
