--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(assert_rush)
 export(assert_rush_worker)
 export(assert_rush_workers)
 export(assert_rushs)
+export(filter_custom_fields)
 export(get_hostname)
 export(heartbeat)
 export(remove_rush_plan)
