--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -29,6 +29,10 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v2
 
+      - uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::pkgdown, local::.
