--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+          install-quarto: true
 
       - name: Install template
         run: pak::pkg_install("mlr-org/mlr3pkgdowntemplate")
