--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -40,9 +40,11 @@ navbar:
     stackoverflow:
       icon: fab fa-stack-overflow
       href: https://stackoverflow.com/questions/tagged/mlr
+      aria-label: Stack Overflow
     rss:
       icon: fa-rss
       href: https://mlr-org.com/
+      aria-label: mlr-org
 
 reference:
   - title: Controller and Worker
