--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -42,10 +42,6 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
-      - uses: quarto-dev/quarto-actions/setup@v2
-        with:
-          tinytex: true
-
       - uses: supercharge/redis-github-action@1.7.0
         with:
           redis-version: 7
@@ -54,6 +50,7 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+          install-quarto: true
 
       - uses: mxschmitt/action-tmate@v3
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
