--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -25,9 +25,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
+      - uses: supercharge/redis-github-action@1.7.0
+        with:
+          redis-version: 7
 
-      - uses: quarto-dev/quarto-actions/setup@v2
+      - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
 
@@ -35,7 +37,12 @@ jobs:
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
+          install-quarto: true
           cache: always
+
+      - name: Install template
+        run: pak::pkg_install("mlr-org/mlr3pkgdowntemplate")
+        shell: Rscript {0}
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
