docs: pkgdown navbar

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -16,8 +16,8 @@ toc:
 
 navbar:
   structure:
-    left:  [reference, news, book, articles]
-    right: [github, mattermost, stackoverflow, rss, lightswitch]
+    left:  [intro, reference, news, book, articles]
+    right: [search,github, mattermost, stackoverflow, rss, lightswitch]
   components:
     home: ~
     reference:
@@ -32,11 +32,6 @@ navbar:
       text: mlr3book
       icon: fa fa-link
       href: https://mlr3book.mlr-org.com
-    articles:
-        text: Articles
-        menu:
-        - text: Get Started
-          href: articles/vignette.html
     stackoverflow:
       icon: fab fa-stack-overflow
       href: https://stackoverflow.com/questions/tagged/mlr
