--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: Package to tackle large-scale problems asynchronously across
     asynchronous optimization algorithms in the 'bbotk' and 'mlr3tuning'
     packages.
 License: MIT + file LICENSE
-URL: https://rush.mlr-org.com
+URL: https://rush.mlr-org.com, https://github.com/mlr-org/rush
 BugReports: https://github.com/mlr-org/rush/issues
 Depends:
     R (>= 3.1.0)
