--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rush
 Title: Rapid Asynchronous and Distributed Computing
-Version: 0.1.2.9000
+Version: 0.2.0
 Authors@R:
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("cre", "aut", "cph"),
            comment = c(ORCID = "0000-0002-8115-0400"))
@@ -12,7 +12,7 @@ Description: Package to tackle large-scale problems asynchronously across
     asynchronous optimization algorithms in the 'bbotk' and 'mlr3tuning'
     packages.
 License: MIT + file LICENSE
-URL: https://rush.mlr-org.com
+URL: https://rush.mlr-org.com, https://github.com/mlr-org/rush
 BugReports: https://github.com/mlr-org/rush/issues
 Depends:
     R (>= 3.1.0)
