--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(rush_config)
 export(rush_plan)
 export(start_worker)
 export(store_large_object)
+export(warn_deprecated)
 import(checkmate)
 import(data.table)
 import(mirai)
