BREAKING CHANGE: package version 1.0.0
* ...

* ...

* BREAKING CHANGE: remove seed

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -61,6 +61,6 @@ reference:
     contents:
       - get_hostname
       - rush-package
-      - with_rng_state
       - store_large_object
       - filter_custom_fields
+      - warn_deprecated
