--- a/.github/workflows/r-cmd-check.yml
+++ b/.github/workflows/r-cmd-check.yml
@@ -20,11 +20,22 @@ name: r-cmd-check
 jobs:
   r-cmd-check:
     runs-on: ${{ matrix.config.os }}
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      RUSH_TEST_USE_REDIS: true
 
     strategy:
       fail-fast: false
@@ -42,10 +53,6 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
-      - uses: supercharge/redis-github-action@1.7.0
-        with:
-          redis-version: 7
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
@@ -60,3 +67,4 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual")' # "--as-cran" prevents to start external processes
+          error-on: '"note"'
