--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(rush_config)
 export(rush_plan)
 export(start_worker)
 export(store_large_object)
-export(with_rng_state)
+export(warn_deprecated)
 import(checkmate)
 import(data.table)
 import(mirai)
@@ -26,8 +26,6 @@ import(redux)
 importFrom(R6,R6Class)
 importFrom(ids,adjective_animal)
 importFrom(jsonlite,fromJSON)
-importFrom(parallel,nextRNGStream)
-importFrom(parallel,nextRNGSubStream)
 importFrom(processx,process)
 importFrom(utils,object.size)
 importFrom(utils,str)
