--- a/.github/workflows/revdep-check.yml
+++ b/.github/workflows/revdep-check.yml
@@ -18,6 +18,16 @@ name: revdep-check
 jobs:
   revdep-check:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
     name: ${{ matrix.package }}
 
@@ -47,10 +57,6 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: release
-
-      - uses: supercharge/redis-github-action@1.8.1
-        with:
-          redis-version: 7
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
