--- a/.github/workflows/revdep-check.yml
+++ b/.github/workflows/revdep-check.yml
@@ -1,3 +1,8 @@
+# Reverse dependency check workflow for the mlr3 ecosystem (v0.1.0)
+# To check a different target package, change `TARGET_PKG_DIR` in `jobs.revdep-check.env`.
+# To check different reverse dependencies (for example, mlr3tuning), update `strategy.matrix.include`.
+# Source: https://github.com/mlr-org/actions
+
 on:
   workflow_dispatch:
     inputs:
@@ -33,18 +38,20 @@ jobs:
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      RUSH_TEST_USE_REDIS: true # tests are allowed to use Redis
+      TARGET_PKG_DIR: rush
 
     strategy:
       fail-fast: false
       matrix:
         include:
           - {package: mlr-org/bbotk, ref: main}
-          - {package: mlr-org/mlr3tuning, ref: rush_v1}
+          - {package: mlr-org/mlr3tuning, ref: main}
 
     steps:
       - uses: actions/checkout@v3
         with:
-          path: rush
+          path: ${{ env.TARGET_PKG_DIR }}
 
       - uses: actions/checkout@v3
         with:
@@ -64,8 +71,8 @@ jobs:
           needs: check
           working-directory: revdep-pkg
 
-      - name: Install rush from source
-        run: R CMD INSTALL rush
+      - name: Install target package from source
+        run: R CMD INSTALL "${{ env.TARGET_PKG_DIR }}"
         shell: bash
 
       - uses: mxschmitt/action-tmate@v3
