--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Imports:
     jsonlite,
     lgr (>= 0.5.0),
     mirai (>= 2.5.0),
-    mlr3misc,
+    mlr3misc (>= 0.20.0),
     processx,
     R6,
     redux,
